[tool.poetry]
name = "resizeimg"
version = "0.1.0"
description = ""
authors = ["AleksandarBuk <aleksandar.buk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.0.1"
pyqt6 = "^6.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
